Updated static pages

--- a/team.html
+++ b/team.html
@@ -11,64 +11,67 @@ initialSection: "team"
 <section class="section --team" id="team" data-video-name="team">
   <div class="__copy">
     <p class="p2 __page-title">Team &amp; People</p>
-    <div class="col2">
-      <div class="__card">
-        <p class="p3 --caps">Key People</p>
-        <ul class="p1 __list">
-          <li>Graeme Weston – Founder/CEO</li>
-          <li>Mike Wynholds – Chief Engineer (Carbon Five)</li>
-          <li>Pablos Holman – Technology Innovation and Design</li>
-          <li>Matt Sullivan – Product Development &amp Strategy (Carbon Five)</li>
-          <li>Brad Roberts – Product Design and Strategy</li>
-          <li>Rob Pak – Technology Architecture and Systems Design (Carbon Five)</li>
-          <li>Sam Mackellar – Brand, Web Design, Video Production</li>
-          <li>Jason Finnerty – Media Content and Communications (Brandscaping)</li>
-          <li>Terry Nietchke – IT, R&D</li>
-          <li>Josh Anchondo – Corporate Finance and Modelling</li>
-        </ul>
-        
-        <p class="p3 --caps">Professional Firms</p>
-        <ul class="p1 __list --no-vmargin">
-          <li>Gunderson Dettmer - Legal</li>
-          <li>Baker Tilly - Accounting & Bookkeeping</li>
-          <li>First Republic - Banking</li>
-        </ul>
-      </div>
+    <div class="__key-people">
+      <p class="p3 --caps">Key People</p>
+      <ul class="p1 __list">
+        <li>Graeme Weston – Founder/CEO</li>
+        <li>Mike Wynholds – Chief Engineer (Carbon Five)</li>
+        <li>Matt Sullivan – Product Development &amp Strategy (Carbon Five)</li>
+        <li>Rob Pak – Technology Architecture and Systems Design (Carbon Five)</li>
+        <li>Sam Mackellar – Brand, Web Design, Video Production</li>
+        <li>Jason Finnerty – Media Content and Communications (Brandscaping)</li>
+        <li>Terry Nietchke – IT, R&D</li>
+        <li>Josh Anchondo – Corporate Finance and Modelling</li>
+      </ul>
+    </div>
 
-      <div class="__card">
-        <p class="p3 --caps">Contributors</p>
-        <ul class="p1 __list">
-          <li>Amy Greime</li>
-          <li>Mike Hill</li>
-          <li>Anne Cramer</li>
-          <li>Quinton Harris</li>
-          <li>Michael Walsh</li>
-          <li>Daniel Amir</li>
-          <li>Sam Owles</li>
-          <li>Jessica Tuck</li>
-          <li>Michael Gill</li>
-          <li>Benjamin Orze</li>
-        </ul>
+    <div class="__professional-firms">
+      <p class="p3 --caps">Professional Firms</p>
+      <ul class="p1 __list --no-vmargin">
+        <li>Legal</li>
+        <li>Baker Tilly - Accounting & Bookkeeping</li>
+        <li>First Republic - Banking</li>
+      </ul>
+    </div>
 
-        <p class="p3 --caps">Acknowledgements &amp; Thanks</p>
-        <ul class="p1 __list">
-          <li>Per Hallberg</li>
-          <li>Toby Jaffe</li>
-          <li>Marco Petruzzi</li>
-          <li>Lee Sacks</li>
-          <li>Bill Kelly</li>
-          <li>Stefan Weitz</li>
-          <li>Stephen Kirk</li>
-          <li>Giorgia Lupi</li>
-          <li>Jaron Lanier</li>
-          <li>Neil Madden</li>
-          <li>Jack Turken</li>
-          <li>Jeffrey Tropp</li>
-          <li>Les Kaplan</li>
-          <li>Valerie Buckingham</li>
-          <li>Katherine Moore</li>
-          <li>David Crellin</li>
-        </ul>
-      </div>
+    <div class="__contributors">
+      <p class="p3 --caps">Contributors</p>
+      <ul class="p1 __list">
+        <li>Amy Greime</li>
+        <li>Mike Hill</li>
+        <li>Pablos Holman</li>
+        <li>Brad Roberts</li>
+        <li>Anne Cramer</li>
+        <li>Quinton Harris</li>
+        <li>Michael Walsh</li>
+        <li>Daniel Amir</li>
+        <li>Sam Owles</li>
+        <li>Jessica Tuck</li>
+        <li>Michael Gill</li>
+        <li>Benjamin Orze</li>
+      </ul>
+    </div>
+
+    <div class="__thanks">
+      <p class="p3 --caps">Acknowledgements &amp; Thanks</p>
+      <ul class="p1 __list">
+        <li>Per Hallberg</li>
+        <li>Toby Jaffe</li>
+        <li>Marco Petruzzi</li>
+        <li>Lee Sacks</li>
+        <li>Bill Kelly</li>
+        <li>Stefan Weitz</li>
+        <li>Stephen Kirk</li>
+        <li>Giorgia Lupi</li>
+        <li>Jaron Lanier</li>
+        <li>Neil Madden</li>
+        <li>Jack Turken</li>
+        <li>Jeffrey Tropp</li>
+        <li>Les Kaplan</li>
+        <li>Valerie Buckingham</li>
+        <li>Katherine Moore</li>
+        <li>David Crellin</li>
+      </ul>
+    </div>
   </div>
 </section>
