Videos page, style updates

--- a/team.html
+++ b/team.html
@@ -71,6 +71,7 @@ initialSection: "team"
         <li>Valerie Buckingham</li>
         <li>Katherine Moore</li>
         <li>David Crellin</li>
+        <li>Normal Kulla</li>
       </ul>
     </div>
   </div>
