Add password protection

--- a/index.html
+++ b/index.html
@@ -4,374 +4,21 @@ title: River
 layout: default
 lineDrawing: true
 pageId: index
-videos: { rough: true, flowing: true, creek: true }
+videos: { password: true }
+initialSection: password
 animatedBackgroundColor: true
 ---
-<div class="scroll-container">
-  <section class="section --home-intro" id="home-intro">
-    <div class="__body">
-      <p class="p5 __typing-text-source --typed-string">In the online world, there are essentially two groups:</p>
-      <div class="p5 --no-vmargin">
-        <span class="__typing-text-target"></span>
-      </div>
-      <div>
-        <p class="p2 hidden-copy --no-vmargin transition">Those who generate data and those who profit from it.</p>
-        <p class="p2 hidden-copy --no-vmargin --delay-1 transition">River brings value to both.</p>
-      </div>
-    </div>
-  </section>
+<section id="password-prompt" class="section password-prompt" data-video-name="password">
+    <div class="__logo">{% include river_logo.svg %}</div>
+    <p class="__welcome p2">Welcome</p>
+    <form class="__form" id="password-form" action="{{ site.baseUrl }}">
+      <input id="password-input" type="text" class="p1 __input" placeholder="Your personal access code" onsubmit="console.log('submit')" />
+      <input class="__submit" type="submit" />
+    </form>
+    <p id="password-error" style="display: none;" class="__error p1 --hidden">Incorrect password, try again</p>
 
-  <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="flowing">
-    <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">River is a platform for your data, providing control and insight <span class="--italic">and</span> helping you make money.</p>
-      <div>
-        <p class="p2 --no-vmargin __typing-text-target"></p>
-      </div>
-      <p class="p1 hidden-copy transition">
-        River gives you:
-        <br />
-        <span class="p3">Privacy</span> &mdash; control who, what, when, and where your data can be used.
-        <br />
-        <span class="p3">Perspective</span> &mdash; learn more about yourself from the data you generate.
-        <br />
-        <span class="p3">Profit</span> &mdash; sell only the slices of your data that you want to sell.
-      </p>
-    </div>
-
-    {% include breadcrumb.html teaser="Are You <br /> Creating Data?" %}
-  </section>
-
-  <section class="section --home-video-1" id="home-video-1" data-video-name="rough">
-    <div class="__body --with-video-button">
-      <button onclick="river.showVideo('647045446'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
-        {% include play_button.svg %}
-      </button>
-        <div>
-          <p class="p2 __typing-text-source --typed-string">You create $data$ every day.</p>
-          <div>
-            <p class="p2 --no-vmargin __typing-text-target"></p>
-          </div>
-        
-          <p class="p1 hidden-copy">
-            River gives you the ability to control where your data is being used,
-            when it's being used, and who has access to it. It's your data.
-          </p>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="Make Data <br /> Work <br /> for You." %}
-  </section>
-
-  <section class="section --your-data-belongs-to-you" id="your-data-belongs-to-you">
-    <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">Your Data Belongs to You.</p>
-      <p class="p2">
-        <span class="__typing-text-target"></span>
-      </p>
-      <div class="hidden-copy">
-        <p class="p1">
-          Big tech, traditional advertisers, and app developers – everyone is changing how they collect data to reflect new laws around the world:
-        </p>
-        <p class="p3 --caps">You Own <span class="p3 --underline">Your</span> Data</p>
-        <p class="p3">River helps you manage and make money from your data.</p>
-        <ul class="p1 --no-vmargin">
-          <li>River gives you full control over how social media, advertisers, and the technology you use for work and play every day can access and use your data. And we help you get paid for it.</li>
-          <li>River’s valuable compliance tools help businesses, enterprises, and organizations comply with global laws designed to protect your privacy.</li>
-          <li>Our model is simple: you choose the data you want to share; we provide a marketplace for you to sell it.</li>
-        </ul>
-        </div>
-    </div>
-
-    {% include breadcrumb.html teaser="Dive into <br /> Your Data" %}
-  </section>
-
-
-  <section class="section --home-river-gives-you-control" id="home-river-gives-you-control">
-    <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">If the service is free, you are probably the product</p>
-      <p class="p2">
-        <span class="__typing-text-target"></span>
-      </p>
-      <div class="col2 hidden-copy">
-        <p class="p1">
-          Websites and businesses collect volumes of data about you and your family, all day, every day. Information like how you slept last night,
-          how many pounds you gained over the holidays, where you like to shop, which games you like to play,
-          what shows you like to watch, how many times you ordered pineapple on your pizza, and so much more.
-          Every single action in your day can be boiled down to a data point, and this information is used by corporations
-          and organizations to influence your decisions, like buying a product or casting a vote.
-        </p>
-        <p class="p1">
-          Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you want to keep private.
-        </p>
-        <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill --caps --block">Stop giving away your data – sign up for river</a>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="Get Paid for <br /> Your Data" %}
-  </section>
-
-    <section class="section --home-privacy-platform-2" id="home-privacy-platform-2">
-    <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">A privacy platform you'll want to use.</p>
-      <p class="p2">
-        <span class="__typing-text-target"></span>
-      </p>
-      <p class="p3 hidden-copy">Imagine:</p>
-      <div class="flex-col2 hidden-copy --delay-1">
-        <ul class="p1 --no-vmargin">
-          <li>
-            <p class="p1 --no-vmargin">A social environment that lets you express your data in a visually spectacular way.</p>
-            <p class="p4 --no-vmargin">Your data can be beautiful – and encrypted.</p>
-          </li>
-
-          <li>
-            <p class="p1 --no-vmargin">An accessible platform that lets you share your data securely, easily, and directly.</p>
-            <p class="p4 --no-vmargin">Your data can be controlled – by you.</p>
-          </li>
-
-          <li>
-            <p class="p1 --no-vmargin">A marketplace where you can get paid for sharing the data you create.</p>
-            <p class="p4 --no-vmargin">Your data can be valuable – and fun.</p>
-          </li>
-        </ul>
-        <div>
-          <p class="p1">
-            <span class="p3 --no-vmargin">Streams</span> is an end-to-end, encrypted communication platform, providing a secure space to share your data with the people and businesses you want to connect with.
-          </p>
-
-          <p class="p1">
-            <span class="p3">RiverBank</span> gives you the liquidity and security of a bank account while connecting you to a marketplace of business and organizations willing to pay for the data you create.
-          </p>
-
-          <div class="p1">
-            <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign Up for River" class="button --orange-fill --caps">Sign up to be a privacy pioneer</a>
-            </div>
-        </div>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="Rent, Sell, <br /> or Lease <br /> Your Data" %}
-  </section>
-
-  <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data" data-video-name="creek">
-    <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">Who is using your data?</p>
-      <p class="p2">
-        <span class="__typing-text-target"></span>
-      </p>
-
-      <div class="col3 hidden-copy">
-        <div class="__card">
-          <p class="p3">Who's tracking you now?</p>
-          <p class="p4 --no-vmargin">Assume Everyone is tracking you.</p>
-          <p class="p1 --no-vmargin">
-            Social media channels, search engines, websites, apps, games, personal
-            assistants, sensors, smartphones, smart cars, smart TVs, and smart
-            anything.
-          </p>
-        </div>
-
-        <div class="__card">
-          <p class="p3">How do they track you?</p>
-          <p class="p4 --no-vmargin">Beyond Cookies</p>
-          <p class="p1 --no-vmargin">
-            Super-cookies, embedded scripts, fingerprinters, cross-device tracking,
-            click-throughs, web beacons, favicons - and more, all silently stealing
-            your data.
-          </p>
-        </div>
-
-        <div class="__card">
-          <p class="p3">What can I control?</p>
-          <p class="p4 --no-vmargin">You Own Your Data</p>
-          <p class="p1 --no-vmargin">
-            With River, you decide which services can have access to your data, as
-            well as what kind of access they can have. You can rent, sell, or lease
-            the information to them or deny them altogether. The decision is yours.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="" %}
-  </section>
-
-  <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2" data-video-name="creek">
-    <div class="__body">
-      <p class="p2">Who is using your data?</p>
-
-      <div class="flex-col3">
-        <div class="__card hidden-copy">
-          <p class="p3">What can I do with my data?</p>
-          <p class="p4 --no-vmargin">You Have Options</p>
-          <p class="p1 --no-vmargin">
-            Store it, sanitize it, share it, secure it, or sell it, then confidently delete your account. Or not.
-          </p>
-        </div>
-
-        <div class="__card --col2 hidden-copy">
-          <p class="p3">Wait – I own my data? What does that mean?</p>
-          <p class="p4 --no-vmargin">100% Yours</p>
-          <p class="p1 --no-vmargin">
-            The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="Control <br /> Your Data" %}
-  </section>
-
-  <section class="section --home-working-with-big-tech" id="home-working-with-big-tech">
-    <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">Working with Deep Tech, not against them.</p>
-      <p class="p2">
-        <span class="__typing-text-target"></span>
-      </p>
-
-      <ul class="p1 hidden-copy">
-        <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data.</li>
-        <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform, app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data. Using the principle of least authority (POLA), app developers can acquire and use the data objects they need without accessing the rest of the data being generated.</li>
-        <li class="p1">Fine-grain permissioning keeps your data secure, while POLA enables you to choose who can see the slice of data you want to share with them.</li>
-      </ul>
-    </div>
-
-    {% include breadcrumb.html teaser="Dive <br /> into River." %}
-  </section>
-
-  <section class="section --home-data-untapped" id="home-data-untapped">
-    <div class="__body --with-video-button">
-      <button onclick="river.showVideo('647044213'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
-        {% include play_button.svg %}
-      </button>
-      <div>
-        <div>
-          <p class="p2 __typing-text-source --typed-string">Data Untapped.</p>
-          <div>
-              <p class="p2 --no-vmargin __typing-text-target"></p>
-              <p>&nbsp;</p>
-          </div>
-        </div>
-
-        <p class="p1 --no-vmargin hidden-copy">
-          A high-level explanation of how River isolates your data: giving you the power to control the information you share while enabling developers to be compliant in the apps and tools they create. Header remains the same.
-        </p>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="Dive <br /> into River." %}
-  </section>
-
-  <section class="section --home-how-does-river-work" id="home-how-does-river-work" data-video-name="rough">
-    <div class="__body">
-      <p class="p2  __typing-text-source --typed-string">The Business of River.</p>
-      <p class="p2">
-        <span class="__typing-text-target"></span>
-      </p>
-
-      <div class="col3 hidden-copy">
-        <div class="__card">
-          <p class="p3">A firewall for your data</p>
-          <p class="p1">
-            You choose what data you'd like to send to market, including how long it
-            will be available, which industries can access your data, and how
-            it can be used.
-          </p>
-        </div>
-        <div class="__card">
-          <p class="p3">A digital marketplace</p>
-          <p class="p1">
-            RiverBank is your digital marketplace, where you can sell your data,
-            track your earnings, and access the money you've made off your data.
-          </p>
-        </div>
-        <div class="__card">
-          <p class="p3">Future plans</p>
-          <p class="p1">
-            Everyone creates data, but not everyone wants to share it, so in the
-            future, we'll offer a premium service that allows you to access the
-            services you want without sharing your information.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="The <br /> River MVP" %}
-  </section>
-
-  <section class="section --home-business-of-data" id="home-business-of-data" data-video-name="rough">
-    <div class="__body --with-video-button">
-      <button onclick="river.showVideo('647045000'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
-        {% include play_button.svg %}
-      </button>
-      <div>
-        <div>
-          <p class="p2 __typing-text-source --typed-string">The Business of Data</p>
-          <div>
-            <p class="p2 --no-vmargin __typing-text-target"></p>
-            <p>&nbsp;</p>
-          </div>
-        </div>
-        <p class="p1 __p1 --no-vmargin hidden-copy">
-          How does River profit from your data? Here's our fully transparent
-          process, designed to protect you and your digital assets.
-        </p>
-      </div>
-    </div>
-
-    {% include breadcrumb.html teaser="Socialize Your Data" %}
-  </section>
-
-  <section class="section --home-resources" id="home-resources" data-video-name="rough">
-    <div class="__body">
-      <p class="p3 --yellow">Resources</p>
-      <ul>
-        <li>
-          <a class="p1" target="_blank" href="http://eliassi.org/lanier_and_weyl_hbr2018.pdf">A Blueprint for a Better Digital Society</a>
-          &mdash;
-          Jaron Lanier and E. Glen Weyl
-        </li>
-
-        <li>
-          <a class="p1" target="_blank" href="https://www.apple.com/privacy/docs/A_Day_in_the_Life_of_Your_Data.pdf">A Day in the Life of Your Data</a> &mdash; via <a class="p1" target="_blank" href="https://www.apple.com">Apple.com</a>
-        </li>
-        <li>
-          <a class="p1" href="https://www.youtube.com/watch?v=qQ-PUXPVlos">How we need to remake the internet</a>
-          &mdash;
-          Jaron Lanier
-        </li>
-
-        <li>
-          <a class="p1" target="_blank" href="https://freecontent.manning.com/capability-based-security-and-macaroons/">Capability-Based Security and Macaroons</a>
-          &mdash;
-          <a class="p1" target="_blank" href="https://www.manning.com">Manning.com</a>
-        </li>
-
-        <li>
-          <a class="p1" target="_blank" href="https://medium.com/@kleffew/what-is-capability-based-security-227c6e5483a5">What is Capability-based Security?</a>
-          &mdash;
-          Kevin Leffew
-        </li>
-
-        <li>
-          <a class="p1" target="_blank" href="https://www.beyondtrust.com/blog/entry/what-is-least-privilege">What Is Least Privilege &amp; Why Do You Need It?</a>
-          &mdash;
-          Matt Miller, BeyondTrust.com
-        </li>
-
-        <li>
-          <a class="p1" target="_blank" href="https://www.youtube.com/watch?v=zjP9JYeAS5s">A path to empowering user choice and boosting user trust in advertising</a> &mdash; Tim Cook, CPDC 2021
-        </li>
-        <li>
-          <a class="p1" target="_blank" href="https://www.dear-data.com/theproject">Dear Data Project</a> &mdash; Giorgia Lupi and Stefanie Posavec
-        </li>
-      </ul>
-      <p class="p1">Ready to start getting paid for your data?</p>
-      <p class="p1">Stay informed about the updates and activities at River.</p>
-      <p>
-        <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill">Sign up to be an early adopter</a>
-      </p>
-      <p class="p1">It's your data. It's your choice.</p>
-    </div>
-  </section>
-</div>
+    <p class="__help p1">
+      Should you have any problems diving into RIVER then please email us on
+      <a class="p1" href="mailto:access@rivergrp.com">access@rivergrp.com</a>
+    </p>
+</section>
